# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .chezmoiignore.tmpl  README.md  dot_gitconfig  dot_tigrc  dot_tmux.conf  dot_wezterm.lua  run_onchange_init-denv.sh.tmpl
dot_config/caddy/: common  common.caddy  executable_Caddyfile
dot_config/docker-apps/apprise/: encrypted_gerald.yml.age
dot_config/docker-apps/v2fly/: encrypted_config.json.age
dot_config/dockers/apprise/: encrypted_gerald.yml.age
dot_config/git/conf.d/: common.conf  delta.conf
dot_config/kitty/: custom.conf  kitty.conf
dot_config/marksman/: config.toml
dot_config/nvim/: coc-settings.json  init.lua  init.lua.tmpl  init.vim.tmpl  run_once_init-vim.sh.tmpl
dot_config/nvim/lua/: coc.lua  coc_options.lua  keymaps.lua  options.lua  plugins.lua
dot_config/opencode/: opencode.json
vimfiles/: .gitignore  README.md  index.mjs  package.json  pyproject.toml
vimfiles/ftplugin/: python.vim
vimfiles/lib/: coc.vim  index.vim  mappings.vim  plug.vim
