[tool.poetry]
name = "vimfiles"
version = "0.1.0"
description = "Gerald's vimfiles"
authors = ["Gerald <gera2ld@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pynvim = "^0.4.3"

[tool.poetry.dev-dependencies]
jedi = "^0.18.1"
pylint = "^2.12.2"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
